<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">List of G1-Comp304 Students</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="st1">Stephen M. : Team Leader</string>
	<string name="st2">Wendall H.</string>
	<string name="st3">Nikita C.</string>
	<string name="st4">Jake P.</string>
	<string name="st5">Robert R.</string>
</resources>
