<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.school.comp304_assign1.MainActivity" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/st1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:src="@drawable/stephen" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:src="@drawable/wendall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout2" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:src="@drawable/nikita" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/Layout3">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:src="@drawable/jake" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout4" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st5" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:src="@drawable/robert" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FlagLayout"
        android:orientation="vertical"
        android:layout_width="300px"
        android:layout_height="200px"
        android:layout_below="@id/Layout5">
        	
    </LinearLayout>

</RelativeLayout>
